--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "archiver": "^7.0.1",
+    "axios": "^1.7.2",
+    "csv-parse": "^5.5.6",
+    "exceljs": "^4.4.0",
+    "formidable": "^3.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "xlsx": "^0.18.5",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "eslint": "^8",
