--- a/.github/workflows/download_sbi_rates.yml
+++ b/.github/workflows/download_sbi_rates.yml
@@ -16,11 +16,11 @@ jobs:
 
     - name: Get current date and time
       id: date
-      run: echo "::set-output name=timestamp::$(date -u +'%Y/%m/%Y-%m-%d-%H:%M')"
+      run: echo "timestamp=$(date -u +'%Y/%m/%Y-%m-%d-%H:%M')" >> $GITHUB_ENV
 
     - name: Download PDF
       run: |
-        TIMESTAMP=${{ steps.date.outputs.timestamp }}
+        TIMESTAMP=${{ env.timestamp }}
         mkdir -p sbi-rates/${TIMESTAMP%/*}
         curl -o sbi-rates/${TIMESTAMP}.pdf https://www.sbi.co.in/documents/16012/1400784/FOREX_CARD_RATES.pdf
 
@@ -29,7 +29,7 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add sbi-rates/
-        git commit -m "Add SBI rates PDF for ${{ steps.date.outputs.timestamp }}"
+        git commit -m "Add SBI rates PDF for ${{ env.timestamp }}"
         git push
       env:
-        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
