--- a/.github/workflows/download_sbi_rates.yml
+++ b/.github/workflows/download_sbi_rates.yml
@@ -1,4 +1,4 @@
-name: Download SBI Rates PDF
+name: Download SBI Rates PDF and Update Conversion Rates
 
 on:
   schedule:
@@ -11,25 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Get current date and time
-      id: date
-      run: echo "timestamp=$(date -u +'%Y/%m/%Y-%m-%d')" >> $GITHUB_ENV
+      - name: Get current date and time
+        id: date
+        run: echo "timestamp=$(date -u +'%Y/%m/%Y-%m-%d')" >> $GITHUB_ENV
 
-    - name: Download PDF
-      run: |
-        TIMESTAMP=${{ env.timestamp }}
-        mkdir -p sbi-rates/${TIMESTAMP%/*}
-        curl -o sbi-rates/${TIMESTAMP}.pdf https://www.sbi.co.in/documents/16012/1400784/FOREX_CARD_RATES.pdf
+      - name: Download PDF
+        run: |
+          TIMESTAMP=${{ env.timestamp }}
+          mkdir -p sbi-rates/${TIMESTAMP%/*}
+          curl -o sbi-rates/${TIMESTAMP}.pdf https://www.sbi.co.in/documents/16012/1400784/FOREX_CARD_RATES.pdf
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add sbi-rates/
-        git commit -m "Add SBI rates PDF for ${{ env.timestamp }}"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run updateConversionRate.js
+        run: node --experimental-modules src/utils/updateConversionRate.js
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add sbi-rates/ usd_inr_rates.json
+          git commit -m "Add SBI rates PDF and update conversion rates for ${{ env.timestamp }}"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
