--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.2.4",
+    "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18",
     "xlsx": "^0.18.5",
