--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
     "react"
   ],
   "rules": {
+    "no-undef": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
     "react/no-unescaped-entities": "off"
   }
 }
