--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "react"
   ],
   "rules": {
+    "no-unused-vars": "off",
     "no-undef": "off",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
