--- a/.github/workflows/download_sbi_rates.yml
+++ b/.github/workflows/download_sbi_rates.yml
@@ -24,6 +24,16 @@ jobs:
           mkdir -p sbi-rates/${TIMESTAMP%/*}
           curl -o sbi-rates/${TIMESTAMP}.pdf https://www.sbi.co.in/documents/16012/1400784/FOREX_CARD_RATES.pdf
 
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add sbi-rates/
+          git commit -m "Add SBI rates PDF and update conversion rates for ${{ env.timestamp }}"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
@@ -39,7 +49,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add sbi-rates/ usd_inr_rates.json
+          git add usd_inr_rates.json
           git commit -m "Add SBI rates PDF and update conversion rates for ${{ env.timestamp }}"
           git push
         env:
