--- a/.github/workflows/download_sbi_rates.yml
+++ b/.github/workflows/download_sbi_rates.yml
@@ -18,6 +18,14 @@ jobs:
         id: date
         run: echo "timestamp=$(date -u +'%Y/%m/%Y-%m-%d')" >> $GITHUB_ENV
 
+      - name: Clean workspace
+          run: |
+            git config --global user.name 'github-actions[bot]'
+            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+            git checkout .
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Download PDF
         run: |
           TIMESTAMP=${{ env.timestamp }}
