--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "predev": "node --experimental-modules autoUpdateRates.mjs",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,12 +21,13 @@
     "formidable": "^3.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "next": "14.2.4",
     "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18",
     "xlsx": "^0.18.5",
-    "yahoo-finance2": "^2.11.3"
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "eslint": "^8",
